<resources>
    <string name="app_name">UberEat</string>
    <string name="inicio">Inicio</string>
    <string name="explorar">Explorar</string>
    <string name="pedidos">Pedidos</string>
    <string name="cuenta">Cuenta</string>

    <string name="nombre_local">Nombre Local</string>
    <string name="costo_envio">Costo envío:</string>
    <string name="precio">$1.44</string>
    <string name="hora">35-45 min</string>
    <string name="puntaje">4.1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>